--- a/lab1/android/build.gradle
+++ b/lab1/android/build.gradle
@@ -17,7 +17,7 @@ android {
         exclude 'META-INF/robovm/ios/robovm.xml'
     }
     defaultConfig {
-        applicationId "com.labball1.game"
+        applicationId "com.gameball1.game"
         minSdkVersion 14
         targetSdkVersion 29
         versionCode 1
@@ -86,7 +86,7 @@ task run(type: Exec) {
     }
 
     def adb = path + "/platform-tools/adb"
-    commandLine "$adb", 'shell', 'am', 'start', '-n', 'com.labball1.game/com.labball1.game.AndroidLauncher'
+    commandLine "$adb", 'shell', 'am', 'start', '-n', 'com.gameball1.game/com.gameball1.game.AndroidLauncher'
 }
 
 eclipse.project.name = appName + "-android"
